# usbip-core

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  names.rs  unix.rs  util.rs  vhci.rs  windows.rs
src/containers/: beef.rs  buffer.rs  stacktools.rs
src/containers/buffer/: serde_helpers.rs
src/unix/: names.rs  udev_helpers.rs  vhci.rs  vhci2.rs
src/util/: __padding.rs  beef.rs  buffer.rs  serde_helpers.rs  singleton.rs
src/vhci/: error.rs
src/windows/: util.rs
src/windows/vhci/: ioctl.rs  ioctl2.rs  utils.rs
src/windows/vhci/utils/: ioctl.rs
