[package]
name = "usbip-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.197", features = ["derive"]}

[target.'cfg(unix)'.dependencies]
udev = "0.8.0"

[target.'cfg(windows)'.dependencies]
windows = "0.54.0"
